# api/internal/handlers/recipe.go
@@ -4,15 +4,16 @@ import (
 	"errors"
 	"net/http"
 
-	"github.com/ajohnston1219/eatme/api/internal/services/recipe"
+	"github.com/ajohnston1219/eatme/api/internal/models"
+	recipeService "github.com/ajohnston1219/eatme/api/internal/services/recipe"
 	"github.com/go-chi/chi/v5"
 )
 
 type RecipeHandler struct {
-	recipeService *recipe.RecipeService
+	recipeService *recipeService.RecipeService
 }
 
-func NewRecipeHandler(recipeService *recipe.RecipeService) *RecipeHandler {
+func NewRecipeHandler(recipeService *recipeService.RecipeService) *RecipeHandler {
 	return &RecipeHandler{
 		recipeService: recipeService,
 	}
@@ -26,25 +27,32 @@ func NewRecipeHandler(recipeService *recipe.RecipeService) *RecipeHandler {
 // @Produce json
 // @Param recipe_id path string true "Recipe ID"
 // @Success 200 {object} models.UserRecipe
-// @Failure 400 {object} models.BadRequestResponse
-// @Failure 500 {object} models.InternalServerErrorResponse
+// @Failure 400 {object} models.APIError "Invalid input"
+// @Failure 401 {object} models.APIError "Unauthorized"
+// @Failure 404 {object} models.APIError "Recipe not found"
+// @Failure 500 {object} models.APIError "Internal server error"
 // @Router /recipes/{recipe_id} [get]
 func (h *RecipeHandler) GetRecipe(w http.ResponseWriter, r *http.Request) {
 	userID := getUserID(r)
 	if userID == "" {
-		errorJSON(w, errors.New("missing user ID"), http.StatusUnauthorized)
+		errorJSON(w, http.StatusUnauthorized, models.ErrUnauthorized)
 		return
 	}
 
 	recipeId := chi.URLParam(r, "recipe_id")
 	if recipeId == "" {
-		errorJSON(w, errors.New("missing recipe ID"), http.StatusBadRequest)
+		errorJSON(w, http.StatusBadRequest, models.ErrBadRequest)
 		return
 	}
 
 	recipe, err := h.recipeService.GetUserRecipe(r.Context(), userID, recipeId)
 	if err != nil {
-		errorJSON(w, err, http.StatusInternalServerError)
+		switch {
+		case errors.Is(err, recipeService.ErrRecipeNotFound):
+			errorJSON(w, http.StatusNotFound, models.ErrRecipeNotFound)
+		default:
+			errorJSON(w, http.StatusInternalServerError, models.ErrInternal)
+		}
 		return
 	}
 	writeJSON(w, http.StatusOK, recipe)
@@ -57,19 +65,20 @@ func (h *RecipeHandler) GetRecipe(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Success 200 {array} models.UserRecipe
-// @Failure 400 {object} models.BadRequestResponse
-// @Failure 500 {object} models.InternalServerErrorResponse
+// @Failure 400 {object} models.APIError "Invalid input"
+// @Failure 401 {object} models.APIError "Unauthorized"
+// @Failure 500 {object} models.APIError "Internal server error"
 // @Router /recipes [get]
 func (h *RecipeHandler) GetAllRecipes(w http.ResponseWriter, r *http.Request) {
 	userID := getUserID(r)
 	if userID == "" {
-		errorJSON(w, errors.New("missing user ID"), http.StatusUnauthorized)
+		errorJSON(w, http.StatusUnauthorized, models.ErrUnauthorized)
 		return
 	}
 
 	recipes, err := h.recipeService.GetAllUserRecipes(r.Context(), userID)
 	if err != nil {
-		errorJSON(w, err, http.StatusInternalServerError)
+		errorJSON(w, http.StatusInternalServerError, models.ErrInternal)
 		return
 	}
 	writeJSON(w, http.StatusOK, recipes)
@@ -83,25 +92,32 @@ func (h *RecipeHandler) GetAllRecipes(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param recipe_id path string true "Recipe ID"
 // @Success 200 {object} models.UserRecipe
-// @Failure 400 {object} models.BadRequestResponse
-// @Failure 500 {object} models.InternalServerErrorResponse
+// @Failure 400 {object} models.APIError "Invalid input"
+// @Failure 401 {object} models.APIError "Unauthorized"
+// @Failure 404 {object} models.APIError "Recipe not found"
+// @Failure 500 {object} models.APIError "Internal server error"
 // @Router /recipes/{recipe_id} [delete]
 func (h *RecipeHandler) DeleteRecipe(w http.ResponseWriter, r *http.Request) {
 	userID := getUserID(r)
 	if userID == "" {
-		errorJSON(w, errors.New("missing user ID"), http.StatusUnauthorized)
+		errorJSON(w, http.StatusUnauthorized, models.ErrUnauthorized)
 		return
 	}
 
 	recipeId := chi.URLParam(r, "recipe_id")
 	if recipeId == "" {
-		errorJSON(w, errors.New("missing recipe ID"), http.StatusBadRequest)
+		errorJSON(w, http.StatusBadRequest, models.ErrBadRequest)
 		return
 	}
 
 	err := h.recipeService.DeleteUserRecipe(r.Context(), userID, recipeId)
 	if err != nil {
-		errorJSON(w, err, http.StatusInternalServerError)
+		switch {
+		case errors.Is(err, recipeService.ErrRecipeNotFound):
+			errorJSON(w, http.StatusNotFound, models.ErrRecipeNotFound)
+		default:
+			errorJSON(w, http.StatusInternalServerError, models.ErrInternal)
+		}
 		return
 	}
 	writeJSON(w, http.StatusOK, nil)
